--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -1990,8 +1990,8 @@ img {
 }
 .project_box_one img {
   display: block;
-  width: 350px;
-  height: 233px;
+  width: 100%;
+  height: 100%;
   margin: 15px;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
