--- a/src/main/webapp/assets/scss/components/_portfolio.scss
+++ b/src/main/webapp/assets/scss/components/_portfolio.scss
@@ -4,7 +4,7 @@
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-  cursor:crosshair;
+  //cursor:crosshair;
   @include single-transition(all , ease-in-out , 0.4s);
   img{
     display: block;
@@ -77,6 +77,20 @@
         }
       }
     }
+  }
+}
+
+.admin_box_one{
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+  cursor:crosshair;
+  @include single-transition(all , ease-in-out , 0.4s);
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    @include single-transition(all, ease-in-out, 0.4s);
   }
 }
 
