--- a/src/main/resources/templates/thymeleaf/views/admin/delete.html
+++ b/src/main/resources/templates/thymeleaf/views/admin/delete.html
@@ -42,7 +42,7 @@
 
             <!--logo -->
             <div class="logo_box">
-                <p style="font-size:24px; color:white; margin-left: 30px" align="left" ;>
+                <p style="font-size:24px; color:white; margin-left: 30px" align="left">
                     <!--鄭長賢 -->
                     Janghyeon Jung
                 </p>
