--- a/src/main/resources/templates/thymeleaf/views/admin/admin.html
+++ b/src/main/resources/templates/thymeleaf/views/admin/admin.html
@@ -88,11 +88,11 @@
                     <div class="container-fluid">
                         <div class="grid img-container justify-content-center no-gutters">
                             <div class="grid-sizer col-sm-12 col-md-6 col-lg-3"></div>
-                            <div th:each="myPhoto : ${myPhotoList}"
+                            <div th:each="myPhoto : ${photoRepository}"
                                  class="grid-item col-sm-12 col-md-6 col-lg-3">
                                 <!-- Image URL 출력 시작 -->
                                     <div class="project_box_one">
-                                        <img th:src="@{${myPhoto.getMediumUrl()}}"/>
+                                        <img th:src="@{${myPhoto.value.getMediumUrl()}}"/>
                                         <div class="product_info">
                                         </div>
                                     </div>
