--- a/src/main/resources/templates/thymeleaf/views/admin/photo-config.html
+++ b/src/main/resources/templates/thymeleaf/views/admin/photo-config.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Pharaohlab">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title>Janghyeon Jung</title>
+    <category>Janghyeon Jung</category>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
@@ -152,8 +152,8 @@
                                                th:attr="checked=${myPhoto.value.getFlag()} == ${permission.name()} ? 'true' : 'false'" th:value="${permission.name()}"/>
                                     </span>
                                     <span>
-                                        <label th:name="title"></label>
-                                        <input type="text" name="title" th:value="${myPhoto.value.getTitle()}">
+                                        <label th:name="category"></label>
+                                        <input type="text" name="category" th:value="${myPhoto.value.getTitle()}">
                                     </span>
                                     <br>
                                     <br>
