Category 추가/편집 기능 추가

--- a/src/main/resources/templates/thymeleaf/views/admin/authConfig.html
+++ b/src/main/resources/templates/thymeleaf/views/admin/authConfig.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Pharaohlab">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <category>Janghyeon Jung</category>
+    <title>Janghyeon Jung</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
