--- a/src/main/resources/templates/thymeleaf/views/user/loginSuccess.html
+++ b/src/main/resources/templates/thymeleaf/views/user/loginSuccess.html
@@ -7,7 +7,7 @@
 --%>
 <html>
 <head>
-    <category>Janghyeon Jung</category>
+    <title>Janghyeon Jung</title>
     <meta http-equiv="refresh" content="0; url=/">
 </head>
 <body>
