--- a/src/main/resources/templates/thymeleaf/views/user/logout.html
+++ b/src/main/resources/templates/thymeleaf/views/user/logout.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=/">
-    <category>Janghyeon Jung</category>
+    <title>Janghyeon Jung</title>
 </head>
 <body>
 <script>
