--- a/src/main/resources/templates/thymeleaf/views/portfolio.html
+++ b/src/main/resources/templates/thymeleaf/views/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Pharaohlab">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <category> Cocoon -Portfolio</category>
+    <title> Cocoon -Portfolio</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
