--- a/src/main/resources/templates/thymeleaf/views/user/denied.html
+++ b/src/main/resources/templates/thymeleaf/views/user/denied.html
@@ -8,7 +8,7 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <html>
 <head>
-    <category>Janghyeon Jung</category>
+    <title>Janghyeon Jung</title>
     <meta http-equiv="refresh" content="0; url=/">
 </head>
 <body>
